--- a/.github/workflows/create-repo.yml
+++ b/.github/workflows/create-repo.yml
@@ -1,4 +1,4 @@
-name: Auto Create Project Repo
+name: Auto Create or Sync Project Repo
 
 on:
   push:
@@ -6,28 +6,37 @@ on:
       - 'content/projects/*.md'
 
 jobs:
-  create-new-repo:
+  sync-project-repo:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
 
-      - name: Get new markdown file name
+      - name: Get changed markdown file name
         id: file
         run: |
           FILE=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep '^content/projects/.*\.md$' | head -n 1)
           echo "file=$FILE" >> $GITHUB_OUTPUT
 
-      - name: Extract title from markdown
+      - name: Extract slug from title
         id: title
         run: |
-          TITLE=$(grep -i 'title *= *' "${{ steps.file.outputs.file }}" | sed -E "s/.*title *= *['\"]?(.*)['\"]?/\1/I")
+          TITLE=$(grep -i 'title *= *' "${{ steps.file.outputs.file }}" | sed -E "s/.*title *= *['\"]?(.*)['\"]?/\1/I" | sed -E 's/[^a-zA-Z0-9-]+/-/g' | tr '[:upper:]' '[:lower:]')
           echo "title=$TITLE" >> $GITHUB_OUTPUT
-          echo "📁 Repo to create: $TITLE"
+          echo "📁 Repo to create or update: $TITLE"
 
-      - name: Create GitHub repo
+      - name: Check if repo exists
+        id: checkrepo
         run: |
+          STATUS=$(curl -s -o /dev/null -w "%{http_code}" -H "Authorization: token ${{ secrets.GH_CREATE_REPO }}" \
+            https://api.github.com/repos/Koustubha-naik/${{ steps.title.outputs.title }})
+          echo "status=$STATUS" >> $GITHUB_OUTPUT
+
+      - name: Create repo if not exists
+        if: steps.checkrepo.outputs.status == '404'
+        run: |
+          echo "Creating new repo..."
           curl -X POST https://api.github.com/user/repos \
             -H "Authorization: token ${{ secrets.GH_CREATE_REPO }}" \
             -H "Accept: application/vnd.github+json" \
@@ -37,17 +46,15 @@ jobs:
         run: |
           mkdir temp
           awk 'BEGIN{p=1} /^\+\+\+/{p=1-p; next} p' "${{ steps.file.outputs.file }}" > temp/README.md
-          echo "Created README.md with project content."
 
-      - name: Push README to new repo
+      - name: Push README to repo
         run: |
           cd temp
           git init
           git config user.name "github-actions"
           git config user.email "github-actions@users.noreply.github.com"
           git add README.md
-          git commit -m "Initial commit with README"
+          git commit -m "Update README from markdown"
           git branch -M main
           git remote add origin https://x-access-token:${{ secrets.GH_CREATE_REPO }}@github.com/Koustubha-naik/${{ steps.title.outputs.title }}.git
-          git push -u origin main
-
+          git push -f origin main
