--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,9 +4,6 @@ on:
   push:
     branches:
       - main
-  pull_request:   # 👈 Optional: checks PRs but doesn’t deploy
-    branches:
-      - main
 
 jobs:
   build-deploy:
@@ -19,32 +16,19 @@ jobs:
           submodules: true
           fetch-depth: 0  # Required for Hugo themes with git info
 
-      - name: Setup Hugo
+      - name: Install Hugo
         uses: peaceiris/actions-hugo@v3
         with:
           hugo-version: 'latest'
-          extended: true
-
-      - name: Cache Hugo resources
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cache/hugo
-            resources/_gen
-          key: ${{ runner.os }}-hugo-${{ hashFiles('**/*') }}
-          restore-keys: |
-            ${{ runner.os }}-hugo-
+          extended: true  # Enable extended version for SCSS, etc.
 
       - name: Build site
-        run: hugo --cleanDestinationDir --minify
+        run: hugo --minify
 
       - name: Deploy to GitHub Pages
-        if: github.ref == 'refs/heads/main'  # Only deploy from main branch
         uses: peaceiris/actions-gh-pages@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }} # ✅ Works for public repos
-          # If repo is private, replace with:
-          # personal_token: ${{ secrets.GH_PAT }}
+          personal_token: ${{ secrets.GH_PAT }}
           publish_branch: gh-pages
           publish_dir: ./public
-          cname: koustubha.com
+          cname: koustubha.com  # 🔥 Add this line to preserve custom domain
